--- a/app/src/main/res/layout/activity_height_screen.xml
+++ b/app/src/main/res/layout/activity_height_screen.xml
@@ -286,7 +286,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_next"
+        android:id="@+id/btn_skip"
         android:layout_width="700dp"
         android:layout_height="20dp"
         android:layout_gravity="center"
