--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -321,7 +321,7 @@
                                 android:textStyle="bold" />
 
                             <Button
-                                android:id="@+id/btn_next"
+                                android:id="@+id/btn_skip"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
                                 android:layout_margin="10dp"
