--- a/app/src/main/res/layout/activity_main_temperature.xml
+++ b/app/src/main/res/layout/activity_main_temperature.xml
@@ -317,7 +317,7 @@
 
         </LinearLayout>
         <Button
-            android:id="@+id/btn_next"
+            android:id="@+id/btn_skip"
             android:layout_width="700dp"
             android:layout_height="50dp"
             android:layout_marginTop="50dp"
