--- a/app/src/main/res/layout/activity_pulse_oximeter_main.xml
+++ b/app/src/main/res/layout/activity_pulse_oximeter_main.xml
@@ -340,7 +340,7 @@
 
 
             <Button
-                android:id="@+id/btn_next"
+                android:id="@+id/btn_Next"
                 android:layout_width="700dp"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
