--- a/app/src/main/res/layout/activity_scan_list.xml
+++ b/app/src/main/res/layout/activity_scan_list.xml
@@ -117,7 +117,7 @@
         android:padding="@dimen/pad5">
 
         <Button
-            android:id="@+id/btn_next"
+            android:id="@+id/btn_skip"
             android:layout_width="700dp"
             android:layout_height="@dimen/hgt45"
             android:layout_gravity="center"
