--- a/app/src/main/res/layout/layout_display_record_screen.xml
+++ b/app/src/main/res/layout/layout_display_record_screen.xml
@@ -666,7 +666,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/btn_next"
+                android:id="@+id/btn_skip"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
