--- a/app/src/main/res/layout/new_try_hemoglobin.xml
+++ b/app/src/main/res/layout/new_try_hemoglobin.xml
@@ -352,7 +352,7 @@
                             android:shadowDy="0"
                             android:shadowRadius="5"
                             android:background="@drawable/buttonshape"
-                            android:id="@id/btn_next"/>
+                            android:id="@id/btn_skip"/>
 
                     </LinearLayout>
                     <LinearLayout
