--- a/app/src/main/res/layout/oxygen_main.xml
+++ b/app/src/main/res/layout/oxygen_main.xml
@@ -255,7 +255,7 @@
 
 
             <Button
-                android:id="@+id/btn_next"
+                android:id="@+id/btn_skip"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_margin="5dp"
