--- a/app/src/main/res/layout/and_dashboard_new.xml
+++ b/app/src/main/res/layout/and_dashboard_new.xml
@@ -266,23 +266,87 @@
 
                     </LinearLayout>
 
-
                     <FrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="1.0">
+                        android:layout_weight="1.5">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
+                            android:visibility="visible"
                             android:weightSum="2">
 
-                            <ImageView
-                                android:layout_width="200dp"
-                                android:layout_height="150dp"
-                                android:padding="@dimen/margin20"
-                                android:src="@drawable/bloodpressure" />
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="2">
+
+                                <LinearLayout
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    android:layout_weight="1">
+
+                                    <ImageView
+                                        android:layout_width="300dp"
+                                        android:layout_height="200dp"
+                                        android:layout_margin="@dimen/pad10"
+                                        android:layout_gravity="center"
+                                        android:src="@drawable/bp_cuff_img"/>
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textSize="@dimen/textsize24"
+                                        android:layout_gravity="center"
+                                        android:text="@string/bloodpressure_step1"/>
+
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    android:layout_weight="1">
+
+                                    <ImageView
+                                        android:layout_width="300dp"
+                                        android:layout_height="200dp"
+                                        android:layout_margin="@dimen/pad10"
+                                        android:layout_gravity="center"
+                                        android:src="@drawable/start_bp_device"/>
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textSize="@dimen/textsize24"
+                                        android:layout_gravity="center"
+                                        android:text="@string/bloodpressure_step2"/>
+
+
+                                </LinearLayout>
+
+                            </LinearLayout>
+                        </LinearLayout>
+
+
+                    </FrameLayout>
+                    <FrameLayout
+                        android:id="@+id/frame_result"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1.0"
+                        android:visibility="visible">
+
+                        <LinearLayout
+                            android:id="@+id/linearlayout_bp_result"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:visibility="visible"
+                            android:weightSum="2">
 
                             <include
                                 android:id="@+id/layout_bp"
@@ -293,38 +357,6 @@
 
                     </FrameLayout>
 
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1.0"
-                        android:visibility="gone">
-
-                        <include
-                            android:id="@+id/llinear_wt"
-                            layout="@layout/display_data_layout_weightscale" />
-                    </FrameLayout>
-
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1.0"
-                        android:visibility="gone">
-
-                        <include
-                            android:id="@+id/llinear_tm"
-                            layout="@layout/display_data_layout_thermometer" />
-                    </FrameLayout>
-
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1.0"
-                        android:visibility="gone">
-
-                        <include
-                            android:id="@+id/llinear_am"
-                            layout="@layout/display_data_layout_activitymonitor" />
-                    </FrameLayout>
 
                     <FrameLayout
                         android:layout_width="match_parent"
@@ -338,7 +370,7 @@
                             android:layout_gravity="center_vertical"
                             android:layout_marginBottom="@dimen/margin20"
                             android:gravity="center"
-                            android:text=""
+                            android:text="@string/bloodpressure_step3"
                             android:textSize="@dimen/space25" />
 
                         <LinearLayout
