--- a/app/src/main/res/layout/activity_pulse_oximeter_main.xml
+++ b/app/src/main/res/layout/activity_pulse_oximeter_main.xml
@@ -175,7 +175,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:orientation="vertical">
 
         <ImageView
@@ -191,43 +190,67 @@
             android:src="@mipmap/applogo"
             android:visibility="gone" />
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/rl_ConnectionStatusLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/main"
+            android:visibility="visible">
+
+
+            <Button
+                android:id="@+id/btn_connect"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_margin="5dp"
+                android:background="@drawable/repeat"
+                android:padding="@dimen/pad15"
+                android:text="Connecting..."
+                android:textColor="@color/white" />
+        </RelativeLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginTop="@dimen/margin20"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
             android:weightSum="3">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="clip_vertical"
                 android:layout_weight="2"
                 android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_centerInParent="true"
                     android:src="@mipmap/pulseimage" />
-            </LinearLayout>
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="250dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_body_oxygen"
                     android:layout_width="400dp"
-                    android:layout_height="50dp"
+                    android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
                     android:layout_gravity="center"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
                     android:text="spo"
                     android:textColor="@color/white"
-                    android:textSize="25sp" />
+                    android:textSize="45sp" />
 
                 <TextView
                     android:id="@+id/tv_pulse_rate"
@@ -241,7 +264,8 @@
                     android:gravity="center"
                     android:text="@string/pr"
                     android:textColor="@color/white"
-                    android:textSize="25sp" />
+                    android:textSize="25sp"
+                    android:visibility="gone" />
 
 
             </LinearLayout>
@@ -253,7 +277,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_pulse_rate"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp">
+            android:layout_marginTop="20dp">
 
             <Button
                 android:id="@+id/btn_connect_device"
@@ -294,7 +318,8 @@
                 android:gravity="center"
                 android:text="@string/bindDevice"
                 android:textColor="@color/white"
-                android:textSize="25sp" />
+                android:textSize="25sp"
+                android:visibility="gone" />
 
         </LinearLayout>
 
@@ -303,7 +328,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearfive"
             android:layout_gravity="center"
-            android:layout_weight="1"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="3">
